Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3456,3 +3456,33 @@ input, select, textarea {
     color: #555;
 }
 
+/* Tabs */
+.tabs {
+  position: relative;
+  min-height: 200px;
+  clear: both;
+  margin: 25px 0;
+  font-family: Arial, sans-serif;
+}
+.tabs input {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+.tabs label {
+  display: inline-block;
+  margin: 0 0 -1px;
+  padding: 15px 25px;
+  font-weight: 600;
+  text-align: center;
+  color: #757575;
+  border: 1px solid transparent;
+}
+.tabs label:hover {
+  color: #888;
+  cursor: pointer;
+}
+.tabs .content > section {
+  display: none;
+  padding: 20px 25px;
+  border-top
